--- a/config/settings.json
+++ b/config/settings.json
@@ -1,6 +1,5 @@
 {
   "url": "https://github.com/kroegerba/deployment-container.git",
-  "repo": "kroegerba/deployment-container.git",
   "branch": "master",
-  "dest": "/work/src"
+  "dest": "/destination"
 }
